Fix: The first fix didn´t work on mobile, added text-align center to the parent element of the bugged link

--- a/sass/pages/_featuredPets.scss
+++ b/sass/pages/_featuredPets.scss
@@ -25,13 +25,12 @@
   }
 
   &__adoption-link {
-    justify-self: center;
+    text-align: center;
     margin-top: 3.6rem;
     color: $color-secondary-dark;
     font-size: $font-mobile-body-12;
     font-weight: $font-weight-bold;
     text-decoration: underline;
-    justify-content: center;
 
     &--link {
       text-decoration: underline;
